Fixed logo size on mobile

--- a/_sass/_sponsors.scss
+++ b/_sass/_sponsors.scss
@@ -38,7 +38,7 @@
 
   #sponsor-list {
     @include reset-list;
-    max-width:                              100%;
+    max-width:                              100vw;
     display:                            grid;
     grid-template-columns: 100%;
 
